--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "dffrnt.utils",
 	"version": "1.0.0",
 	"description": "A collection of useful API Utilities & PolyFills",
-	"author": "Arian Johnson <arian.johnson@dffrnt.ca>",
+	"author": "Arian Johnson <arian.johnson@icloud.com>",
 	"homepage": "https://dffrnt.ca",
 	"repository" : {
 		"type" : "git",
