--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
 	"license": "GNU",
 	"dependencies": {
 		"app-root-path": "*",
-		"harmony-reflect": "^1.4.2",
+		"babel-core": "^6.7.4",
+        "babel-preset-es2015": "^6.6.0",
+        "babel-preset-react": "^6.5.0",
 		"colors": "^1.1.0",
-		"object-assign": "*",
+		"harmony-reflect": "^1.4.2",
 		"immutable": "*",
 		"immutablediff": "^0.4.4",
-		"strftime": "^0.9.2",
-		"longjohn": "*"
+		"longjohn": "*",
+		"object-assign": "*",
+		"strftime": "^0.9.2"
 	}
 }
