--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
 	"homepage": "https://dffrnt.ca",
 	"repository" : "DFFR-NT/dffrnt.utils",
 	"main": "index.js",
-	"license": "GNU",
+	"license": "MIT",
 	"dependencies": {
 		"app-root-path": "*",
 		"babel-core": "^6.7.4",
-        "babel-preset-es2015": "^6.6.0",
-        "babel-preset-react": "^6.5.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.6.0",
+		"babel-preset-react": "^6.5.0",
 		"colors": "^1.1.0",
 		"harmony-reflect": "^1.4.2",
 		"immutable": "*",
