--- a/package.json
+++ b/package.json
@@ -1,34 +1,22 @@
 {
-  "_from": "git+https://github.com/leshaunj/dffrnt.utils.git",
-  "_id": "dffrnt.utils@1.0.0",
-  "_inBundle": false,
-  "_location": "/dffrnt.utils",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "dffrnt.utils@git+https://github.com/leshaunj/dffrnt.utils.git",
-    "name": "dffrnt.utils",
-    "escapedName": "dffrnt.utils",
-    "rawSpec": "git+https://github.com/leshaunj/dffrnt.utils.git",
-    "saveSpec": "git+https://github.com/leshaunj/dffrnt.utils.git",
-    "fetchSpec": "https://github.com/leshaunj/dffrnt.utils.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "/",
-    "/dffrnt.model",
-    "/dffrnt.route"
-  ],
-  "_resolved": "git+https://github.com/leshaunj/dffrnt.utils.git#0f032766a89356e7dae64d32e77130712615d7f2",
-  "_spec": "dffrnt.utils@git+https://github.com/leshaunj/dffrnt.utils.git",
-  "_where": "/Users/LeShaun/Dropbox/Development/DFFRNT/API",
+  "name": "dffrnt.utils",
+  "description": "A collection of useful API Utilities & PolyFills",
+  "version": "1.5.0",
+  "license": "GNU",
   "author": {
     "name": "Arian Johnson",
     "email": "arian.johnson@icloud.com"
   },
+  "homepage": "https://dffrnt.ca",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeShaunJ/dffrnt.utils.git"
+  },
   "bugs": {
     "url": "https://github.com/LeShaunJ/dffrnt.utils/issues"
   },
+  "main": "lib/utils.js",
+  "deprecated": false,
   "bundleDependencies": false,
   "dependencies": {
     "app-root-path": "*",
@@ -43,15 +31,4 @@
     "object-assign": "*",
     "strftime": "^0.9.2"
   },
-  "deprecated": false,
-  "description": "A collection of useful API Utilities & PolyFills",
-  "homepage": "https://dffrnt.ca",
-  "license": "GNU",
-  "main": "lib/utils.js",
-  "name": "dffrnt.utils",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LeShaunJ/dffrnt.utils.git"
-  },
-  "version": "1.0.0"
 }
