--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
 		"name": "Arian Johnson",
 		"email": "arian.johnson@icloud.com"
 	},
-	"homepage": "https://github.com/DFFR-NT/dffrnt.utils#readme",
-	"repository": "DFFR-NT/dffrnt.utils",
+	"homepage": "https://github.com/DFFR-NT/dffrnt.utils",
+	"repository": {
+		"type": "git",
+    	"url": "git://github.com/DFFR-NT/dffrnt.utils.git"
+	},
 	"bugs": {
 		"url": "https://github.com/DFFR-NT/dffrnt.utils/issues"
 	},
