--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 		"name": "Arian Johnson",
 		"email": "arian.johnson@icloud.com"
 	},
-	"homepage": "https://github.com/DFFR-NT/dffrnt.utils",
+	"homepage": "https://github.com/DFFR-NT/dffrnt.utils#readme",
 	"repository": {
 		"type": "git",
-    	"url": "git://github.com/DFFR-NT/dffrnt.utils.git"
+    	"url": "https://github.com/DFFR-NT/dffrnt.utils."
 	},
 	"bugs": {
 		"url": "https://github.com/DFFR-NT/dffrnt.utils/issues"
