--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"homepage": "https://github.com/DFFR-NT/dffrnt.utils#readme",
 	"repository": {
 		"type": "git",
-    	"url": "https://github.com/DFFR-NT/dffrnt.utils."
+    	"url": "https://github.com/DFFR-NT/dffrnt.utils.git"
 	},
 	"bugs": {
 		"url": "https://github.com/DFFR-NT/dffrnt.utils/issues"
