--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
 		"npm": "<=5.6.0"
 	},
 	"dependencies": {
-		"app-root-path": "*",
-		"colors": "^1.1.0",
-		"harmony-reflect": "^1.4.2",
-		"immutable": "*",
-		"immutablediff": "^0.4.4",
-		"longjohn": "*",
-		"object-assign": "*",
-		"strftime": "^0.9.2"
+		"app-root-path": "2.0.1",
+		"colors": "1.2.1",
+		"harmony-reflect": "1.6.0",
+		"immutable": "3.8.2",
+		"immutablediff": "0.4.4",
+		"longjohn": "0.2.12",
+		"object-assign": "4.1.1",
+		"strftime": "0.9.2"
 	}
 }
