--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
 	"name": "dffrnt.utils",
 	"version": "1.5.2",
 	"description": "A collection of useful API Utilities & PolyFills",
+	"keywords": [
+		"utility-library",
+		"utilities",
+		"polyfil",
+		"dffrnt"
+	],
 	"author": {
 		"name": "Arian Johnson",
 		"email": "arian.johnson@icloud.com"
