--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dffrnt.utils",
-	"version": "1.5.3",
+	"version": "1.5.4",
 	"description": "A collection of useful API Utilities & PolyFills",
 	"keywords": [
 		"utility-library",
@@ -10,9 +10,10 @@
 	],
 	"author": {
 		"name": "Arian Johnson",
-		"email": "arian.johnson@icloud.com"
+		"email": "arian.johnson@icloud.com",
+		"url": "https://github.com/LeShaunJ"
 	},
-	"homepage": "https://github.com/DFFR-NT/dffrnt.utils#readme",
+	"homepage": "https://dffrnt.ca",
 	"repository": {
 		"type": "git",
     	"url": "https://github.com/DFFR-NT/dffrnt.utils.git"
@@ -22,12 +23,6 @@
 	},
 	"main": "lib/utils.js",
 	"license": "MIT",
-	"cpu" : [ "x64" ],
-	"os" : [ "darwin", "linux", "Win32" ],
-	"engines" : { 
-		"node" : "<=8.9.4",
-		"npm": "<=5.6.0"
-	},
 	"dependencies": {
 		"app-root-path": "2.0.1",
 		"colors": "1.2.1",
