--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dffrnt.utils",
-	"version": "1.5.5",
+	"version": "1.6.0",
 	"description": "A collection of useful API Utilities & PolyFills",
 	"keywords": [
 		"utility-library",
@@ -30,6 +30,8 @@
 		"immutable": "3.8.2",
 		"immutablediff": "0.4.4",
 		"longjohn": "0.2.12",
+		"moment": "2.22.2",
+		"moment-timezone": "0.5.21",
 		"object-assign": "4.1.1",
 		"strftime": "0.9.2"
 	}
