--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dffrnt.utils",
-	"version": "3.0.9",
+	"version": "4.0.0",
 	"description": "A collection of useful API Utilities & PolyFills",
 	"keywords": [
 		"utility-library",
@@ -22,6 +22,7 @@
 		"url": "https://github.com/DFFR-NT/dffrnt.utils/issues"
 	},
 	"main": "lib/utils.js",
+	"types": "lib/utils.d.ts",
 	"engines" : { "node" : ">=8.94 <10.16.3" },
 	"license": "MIT",
 	"dependencies": {
@@ -34,6 +35,7 @@
 		"moment": "2.22.2",
 		"moment-timezone": "0.5.21",
 		"object-assign": "4.1.1",
-		"strftime": "0.9.2"
+		"strftime": "0.9.2",
+		"tzdata": "1.0.11"
 	}
 }
