--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dffrnt.utils",
-	"version": "4.0.4",
+	"version": "4.0.5",
 	"description": "A collection of useful API Utilities & PolyFills",
 	"keywords": [
 		"utility-library",
@@ -13,7 +13,7 @@
 		"email": "arian.johnson@icloud.com",
 		"url": "https://github.com/LeShaunJ"
 	},
-	"homepage": "https://dffrnt.ca",
+	"homepage": "https://dffr-nt.github.io/dffrnt.api",
 	"repository": {
 		"type": "git",
     	"url": "https://github.com/DFFR-NT/dffrnt.utils.git"
